@@ -32,7 +32,7 @@ from openquake.qa_tests_data.classical import (
     case_18, case_19, case_20, case_21, case_22, case_23, case_24, case_25,
     case_26, case_27, case_28, case_29, case_30, case_31, case_32, case_33,
     case_34, case_35, case_36, case_37, case_38, case_39, case_40, case_41,
-    case_42, case_43)
+    case_42, case_43, case_44, case_45)
 
 
 class ClassicalTestCase(CalculatorTestCase):
@@ -535,3 +535,16 @@ hazard_uhs-std.csv
         # collapse_factor = 3 * rupture radius > maximum_distance
         self.assert_curves_ok(["hazard_curve-mean-PGA.csv",
                                "hazard_map-mean-PGA.csv"], case_43.__file__)
+
+    def test_case_44(self):
+        # this is a test for shift_hypo = true - We computed the results
+        # using the same input and a simpler calculator implemented in a
+        # jupyter notebook
+
+        self.assert_curves_ok(["hazard_curve-mean-PGA.csv"], case_44.__file__)
+
+    def test_case_45(self):
+        # this is a test for shift_hypo = false - We computed the results
+        # using the same input and a simpler calculator implemented in a
+        # jupyter notebook
+        self.assert_curves_ok(["hazard_curve-mean-PGA.csv"], case_45.__file__)
