@@ -1,6 +1,6 @@
 [general]
 
-description = Test the use of the `shift_hypo` option 
+description = Test when `shift_hypo` option is False
 calculation_mode = classical
 random_seed = 23
 
